# cadenza

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cadenza-cli/: Cargo.toml
cadenza-cli/src/: aliases.rs  client.rs  main.rs  skill.rs
cadenza-cli/tests/: exit_codes.rs
docs/: RELEASING.md
i18n/: Cargo.toml
i18n/src/: bundle.rs  lib.rs  locale.rs
locales/en/: cli.ftl  errors.ftl  main.ftl  ui.ftl
locales/pt-BR/: cli.ftl  errors.ftl  main.ftl  ui.ftl
proto/: Cargo.toml
proto/src/: ideia.rs  lib.rs  memory.rs  ops.rs  project.rs  task.rs  triage.rs  wire.rs
skills/: cadenza.en.md  cadenza.pt-BR.md
skills-core/: Cargo.toml
skills-core/src/: lib.rs
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_ideias.sql  003_memory.sql
src-tauri/migrations-pg/: 001_initial.sql  002_ideias.sql  003_memory.sql
src-tauri/src/: agent.rs  attachments.rs  auth.rs  blockers.rs  commands.rs  config.rs  git.rs  ipc.rs  lib.rs  main.rs  models.rs  notify.rs  observ.rs  ordering.rs  projects.rs  runs.rs  secrets.rs  spawn.rs  terminal.rs  worktrees.rs
src-tauri/src/store/: files.rs  files_inner.rs  ideias_inner.rs  memory_inner.rs  migrate.rs  mod.rs  postgres.rs  sqlite.rs  triage_inner.rs
ui/: agent-presence.js  app.js  attachments.js  i18n.js  ideia-modal.js  index.html  markdown.js  project-colors.js  project-memory.js  settings.js  start-agent-modal.js  styles.css  task-modal.js  terminal.js  theme.js  triage-modal.js
