[workspace]
resolver = "2"
members = [
    "src-tauri",
    "cadenza-cli",
    "proto",
    "i18n",
    "skills-core",
]

[workspace.package]
# Placeholder: `main` is never a published version. The real version is
# stamped from the git tag by CI (see .github/workflows/release.yml and
# docs/RELEASING.md). `0.0.0` means "unpublished / dev build".
version = "0.0.0"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
repository = "https://github.com/williammb/cadenza"
authors = ["Cadenza contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }
fs2 = "0.4"
dirs = "6"
fluent-bundle = "0.16"
intl-memoizer = "0.5"
unic-langid = "0.9"
include_dir = "0.7"
sys-locale = "0.3"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
vte = "0.15"
interprocess = { version = "2", features = ["tokio"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
sqlx = { version = "0.9", default-features = false, features = [
    "sqlite",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "migrate",
] }
keyring = "4"
keyring-core = "1"

cadenza-proto = { path = "proto" }
cadenza-i18n = { path = "i18n" }
skills-core = { path = "skills-core" }

[profile.dev]
opt-level = 0
debug = 1

# Tuned for CI build time over peak runtime perf: this is an early-stage
# desktop app where a ~30 min release build is the real cost, not a few
# percent of binary speed. lto=false + codegen-units=16 parallelize codegen
# and drop the serial link-time pass. Revisit (lto="thin", codegen-units=1)
# if/when runtime perf of the shipped binary actually matters.
[profile.release]
opt-level = 3
lto = false
strip = true
codegen-units = 16
