[package]
name = "skills-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cadenza skill installer — install/remove/status of the agent skill snippet (Claude, Codex), shared between cadenza-cli and the Tauri app"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
