[package]
name = "cadenza"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cadenza desktop app — Tauri 2.x tray app for AI agent task management"
default-run = "cadenza"

[lib]
name = "cadenza_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cadenza"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
fs2 = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
portable-pty = { workspace = true }
interprocess = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
keyring = { workspace = true }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
arboard = "3"

cadenza-proto = { workspace = true }
cadenza-i18n = { workspace = true }
skills-core = { workspace = true }

[dev-dependencies]
tempfile = "3"
